# brain-note

./: .gitignore  README.md  pyproject.toml
brain/: cli.py  router.py  storage.py
brain/commands/: notes.py  search.py
