[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-note"
version = "0.2.0"
description = "Brain: A command-line interface for managing your knowledge base."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Griffin McManus" }
]
dependencies = []

[project.scripts]
brain = "brain.cli:main"