[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-note"
version = "0.6.2"
description = "A minimal, local-first CLI note system."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Griffin McManus" }
]
dependencies = []

[project.scripts]
brain = "brain.cli:main"